# test_energo

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/apps/: routers.py
src/apps/utils/: api.py  schemas.py  services.py
src/config/: settings.py
